Fix cutoff sms-from label

--- a/md.css
+++ b/md.css
@@ -293,7 +293,7 @@ label {
     font-weight: bold;
     text-overflow: ellipsis;
     width: 50px;
-    height: 13px;
+    height: 15px;
 }
 
 .gc-message-sms-row {
